username and password from command line